# routes/handyman.js
@@ -1,10 +1,11 @@
 const routes = require('express').Router()
 const handymanControllers = require("../contollers/handyman")
 
-routes.post("/", handymanControllers.createHandyman)
 routes.get("/", handymanControllers.getAll)
-routes.get("/:profession", handymanControllers.getProfession)
+routes.get("/:id", handymanControllers.getSingle)
+routes.post("/", handymanControllers.createHandyman)
 routes.put("/:id", handymanControllers.updateHandyman)
-routes.delete("/:id", handymanControllers.getProfession)
+
+routes.get("/profession/:profession", handymanControllers.getProfession)
 
 module.exports = routes
